--- a/estilo.css
+++ b/estilo.css
@@ -1,10 +1,12 @@
 * {
     margin: 0;
     padding: 0;
+    /* remoção da margin e padding padrão */
 }
 
 body {
     background-color: #dddada;
+    /* mudança da cor de fundo da página */
 }
 
 ul {
@@ -14,6 +16,7 @@ ul {
     padding: 20px 0;
     background-color: #222;
     flex-wrap: wrap;
+    /* formatação do menu de navegação, inserindo display flex e removendo o list stlye */
 }
 
 li a {
@@ -21,17 +24,20 @@ li a {
     text-decoration: none;
     font-family: 'Courier New', Courier, monospace;
     font-size: 20px;
+    /* formatação dos links do menu de navegação, também removendo o sublinhado padrão */
 }
 
 li a:hover {
     font-weight: bold;
     color: #fff;
     background-color: #444;
+    /* estilização dos links do menu de navegação ao colocar o mouse em cima */
 }
 
 .main {
     width: 100%;
     margin-top: 20px;
+    /* pequena separação entre o cabeçalho e o conteúdo principal */
 }
 
 .container {
@@ -40,17 +46,21 @@ li a:hover {
     margin: 0 auto 30px auto;
     border-bottom: 4px solid #fff;
     width: 80%;
+    /* estilização dos containers, adicionando margin e padding para melhor disposição dos conteúdos */
+    /* borda inferior inserida para separar um conteúdo do outro de forma mais clara */
 }
 
 .titulo {
     font-size: 34px;
     color: #222;
     margin-bottom: 10px;
+    /* estilização dos títulos */
 }
 
 .paragrafo {
     font-size: 18px;
     line-height: 1.5em;
+    /* estilização dos paragrafos */
 }
 
 .container a {
@@ -62,6 +72,7 @@ li a:hover {
 
 .container a:hover {
     font-weight: bold;
+    /* estilização dos links ao colocar o mouse em cima, para mais claridade visual */
 }
 
 .container input {
@@ -69,6 +80,7 @@ li a:hover {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 14px;
     height: 1.3rem;
+    /* estilização da fonte e tamanho dos inputs */
 }
 
 .container button {
@@ -80,4 +92,5 @@ li a:hover {
     border: 0;
     border-radius: 8px;
     font-size: 14px;
+    /* estilização do botão, deixando as bordas redondas e mudando as corer da fonte e de fundo */
 }
